# pyworker

./: README.md  pyproject.toml
pyworker/: config.py  master.py  worker.py
